Revision history for Text::OutputFilter

0*14	Sat 03 Jan 2009

    - Copyright 2009

0.13	Wed 02 Jan 2008

    - Spellchecks
    - Removed prototypes
    - Now under git
    - Added simplistic example
    - Added prereq's to Makefile.PL
    - Upped copyright year

0.12	Tue 02 May 2007

    - Pod checks were wrong (yank/put problem)
    - Added test_cover make target
    - Added Text::Filter to SEE ALSO
    - Added tests for printf and binmode
    - Fixed binmode
    - Added tests for tell, eof, and fileno
    - Added tests for input (forbidden) and NYI functionality

0.11	Wed 21 Mar 2007

    - Initial release to CPAN