@@ -1,6 +1,7 @@
 \.git
 blib/
 cover_db/
+sandbox/
 Makefile
 MANIFEST.SKIP
 pm_to_blib
