@@ -10,7 +10,7 @@ use ExtUtils::MakeMaker;
 my %wm = (
     NAME         => "Text::OutputFilter",
     ABSTRACT     => "Filter and modify output",
-    AUTHOR       => "H.Merijn Brand <h.merijn\@procura.nl>",
+    AUTHOR       => "H.Merijn Brand <h.m.brand\@xs4all.nl>",
     LICENSE	 => "perl",
     VERSION_FROM => "OutputFilter.pm",
     PREREQ_PM	 => {
@@ -27,10 +27,41 @@ package MY;
 
 sub postamble
 {
+    my $valgrind = join " ", qw(
+	PERL_DESTRUCT_LEVEL=2 PERL_DL_NONLAZY=1
+	    valgrind
+		--suppressions=sandbox/perl.supp
+		--leak-check=yes
+		--leak-resolution=high
+		--show-reachable=yes
+		--num-callers=50
+		--log-fd=3
+		$(FULLPERLRUN) "-MExtUtils::Command::MM" "-e"
+		    "test_harness($(TEST_VERBOSE), '$(INST_LIB)', '$(INST_ARCHLIB)')"
+		    $(TEST_FILES) 3>valgrind.log
+		    );
     join "\n" =>
 	'cover test_cover:',
-	'	cover -delete',
-	'	HARNESS_PERL_SWITCHES=-MDevel::Cover $(MAKE) test',
-	'	cover',
+	'	ccache -C',
+	'	cover -test',
+	'',
+	'leakcheck:',
+	"	$valgrind",
+	'	-@tail -5 valgrind.log',
+	'',
+	'leaktest:',
+	q{	sandbox/leaktest $(FULLPERLRUN) "test_harness($(TEST_VERBOSE), '$(INST_LIB)', '$(INST_ARCHLIB)')" $(TEST_FILES)},
+	'',
+	'checkmeta:',
+	'	perl sandbox/genMETA.pl -c',
+	'',
+	'fixmeta:	distmeta',
+	'	perl sandbox/genMETA.pl',
+	'	ls -l */META.yml',
+	'',
+	'tgzdist:	checkmeta fixmeta $(DISTVNAME).tar.gz distcheck',
+	'	-@mv -f $(DISTVNAME).tar.gz $(DISTVNAME).tgz',
+	'	-@cpants_lint.pl $(DISTVNAME).tgz',
+	'	-@rm -f Debian_CPANTS.txt',
 	'';
     } # postamble
