@@ -3,7 +3,7 @@ package Text::OutputFilter;
 use strict;
 use warnings;
 
-$Text::OutputFilter::VERSION = 0.14;
+our $VERSION = 0.14;
 
 =head1 NAME
 
@@ -72,7 +72,8 @@ H.Merijn Brand <h.m.brand@procura.nl>
 
 Copyright (C) 2006-2009 H.Merijn Brand for PROCURA B.V.
 
-This library is not free software; you can't redistribute it
+This library is free software; you can redistribute it and/or modify
+it under the same terms as Perl itself. 
 
 =head1 SEE ALSO
 
