@@ -1,0 +1,1 @@
+/pro/3gl/CPAN/perl/t/perl.supp
