@@ -1,8 +1,11 @@
 Revision history for Text::OutputFilter
 
-0*14	Sat 03 Jan 2009
+0*14	Wed 07 Jan 2009
 
     - Copyright 2009
+    - Made the license as in perl. Was still accidentally restricted
+    - Corrected e-mail
+    - Generated and checked META.yml
 
 0.13	Wed 02 Jan 2008
 
